--- a/README.html
+++ b/README.html
@@ -1,51 +1,32 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Mobile Stream</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Embedded Stream</title>
   <style>
-    body, html {
+    html, body {
       margin: 0;
       padding: 0;
       height: 100%;
-      background-color: black;
-      color: red;
-      font-family: Arial, sans-serif;
       overflow: hidden;
-    }
-    .warning {
-      position: absolute;
-      z-index: 9999;
-      background-color: yellow;
-      color: red;
-      font-weight: bold;
-      text-align: center;
-      width: 100%;
-      padding: 10px 0;
     }
     #player {
       position: absolute;
-      top: 50px;
+      top: 0;
       left: 0;
       width: 100%;
-      height: calc(100% - 50px);
+      height: 100%;
       border: none;
     }
   </style>
 </head>
 <body>
-  <div class="warning">
-    ⚠️ USE AD BLOCKER – MOBILE USE ONLY!!!
-  </div>
-
-  <iframe id="player" 
-          src="https://veplay.top/stream/ce9425f6-33e5-4cc9-94b2-0489a228f4a0" 
-          scrolling="no" 
-          allowfullscreen="yes" 
-          allow="encrypted-media; picture-in-picture;" 
-          frameborder="0">
+  <iframe
+    id="player"
+    src="https://veplay.top/stream/18bb57de-5e89-4f8e-a2c7-61ebb5438450"
+    allowfullscreen
+    allow="encrypted-media; picture-in-picture">
   </iframe>
 </body>
 </html>
